--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3001
 NODE_ENV=developmet
 
 URL_MONGO=mongodb://127.0.0.1:27017/GestorOpiniones
+SECRET_OR_PRIVATE_KEY=ClaveSecretaSuperSeguraParaElLab2026
